# pandiag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: format_dot.py
pandiag/: __init__.py
pandiag/dot/: format.py
pandiag/drawio/: parse.py
pandiag/markdown/: __init__.py  format.py
pandiag/mermaid/: format.py
pandiag/model/: graph.py
